<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DosmFragment">

    <Button
        android:id="@+id/FilledButton"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:text="@string/Dos_Mitades"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/ic_close"
        android:backgroundTint="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FilledButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/Dos_M"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="340dp"
        android:layout_height="158dp"
        android:layout_marginBottom="352dp"
        android:text="@string/Mitades_Pasos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="Ingresa una cadena de caracteres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/FilledButton2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/teal"
        android:textColor="@color/black"
        android:text="@string/Solucionar"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />
</androidx.constraintlayout.widget.ConstraintLayout>